merge de frontend